# motcpp

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
configs/trackers/: bytetrack.yaml  deepocsort.yaml  ocsort.yaml  strongsort.yaml
docs/: Doxyfile  index.md
docs/api/: README.md
docs/examples/: README.md  simple_tracking.cpp
docs/guides/: architecture.md  benchmarking.md  getting-started.md  trackers.md
docs/stylesheets/: extra.css
docs/tutorials/: README.md
examples/: CMakeLists.txt
include/motcpp/: motcpp.hpp
include/motcpp/appearance/: onnx_backend.hpp
include/motcpp/association/: lap_solver.hpp
include/motcpp/motion/cmc/: sof.hpp
include/motcpp/motion/kalman_filters/: xywh_kf.hpp
include/motcpp/utils/: iou.hpp  matching.hpp
scripts/: auto_benchmark.sh  eval_mot.py  export_reid_onnx.py  generate_demo_gif.py  generate_demo_gifs.py  generate_real_demos.py  prepare_release_data.sh
src/appearance/: onnx_backend.cpp
src/data/: mot17_dataset.cpp
src/motion/kalman_filters/: xysr_kf.cpp
src/trackers/: boosttrack.cpp  botsort.cpp  bytetrack.cpp  deepocsort.cpp  hybridsort.cpp  strongsort.cpp  ucmc.cpp
tests/: CMakeLists.txt  test_bytetrack.cpp  test_iou.cpp  test_kalman_filter.cpp  test_main.cpp  test_matching.cpp  test_sort.cpp  test_trackers.cpp
tools/: CMakeLists.txt  motcpp_eval.cpp
